#382- 'Mindmap-UI_Issue_When i Scroll down Modules collapse icon is not display Properly. Fixed

--- a/public/css/css_mindmap/style.css
+++ b/public/css/css_mindmap/style.css
@@ -67,13 +67,13 @@ p,a,img,text,span,.noselect{-webkit-touch-callout:none;-webkit-user-select:none;
 #ct-moduleBox .ct-expand{height:8px;width:60px;left:calc(50% - 40px);bottom:0;background-color:#fff}
 #ct-moduleBox .ct-expand::after{left:25px;top:1px;border-top-color:#333}
 #ct-moduleBox .ct-expand.ct-rev::after{left:25px;top:-4px;border-top-color:transparent;border-bottom-color:#333}
-#ct-moduleBox.ct-open{height:auto;max-height:280px;overflow:auto}
+#ct-moduleBox.ct-open{height: 260px; /* max-height: 280px; */ overflow: auto;}
 /**Optional for id ct-moduleBox CSS**/
 .ct-moduleBoxOptional{position:absolute;padding:0 10px;top:30px;z-index:100;height:92px;width:83%;background-color:#e6e7e9;border:1px solid#e6e7e9; left: 147px}
 .ct-moduleBoxOptional .ct-expand{height:8px;width:60px;left:calc(50% - 30px);bottom:0;background-color:#fff}
 .ct-moduleBoxOptional .ct-expand::after{left:25px;top:1px;border-top-color:#333}
 .ct-moduleBoxOptional .ct-expand.ct-rev::after{left:25px;top:-4px;border-top-color:transparent;border-bottom-color:#333}
-.ct-moduleBoxOptional.ct-open{height:auto;max-height:280px;overflow:auto}
+.ct-moduleBoxOptional.ct-open{height: 260px; /* max-height: 280px; */ overflow: auto;}
 /**Optional for id ct-moduleBox CSS**/
 #ct-canvas, #ct-canvasforAssign{position:absolute;height:100%;overflow:hidden;border:1px solid transparent; z-index: -99 !important; width: inherit;}
 /*.ct-tileBox{position: relative; display: block; top: 53%; left: 65%; transform: translateX(-50%) translateY(-50%); width: 150px;}*/
@@ -317,7 +317,7 @@ select
     bottom: 553px !important;
     margin-bottom: 0px !important;
 }
-.iconSpaceArrow{
+/*.iconSpaceArrow{
     width: 65px;
     display: inline-block;
     height: 10px;
@@ -330,6 +330,16 @@ select
 {
     position: relative;
     top: 0px !important;
+}*/
+#ctExpandCreate, #ctExpandAssign{    
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    cursor: pointer;
+}
+#ctExpandCreate img, #ctExpandAssign img {
+    vertical-align: bottom;
 }
 .leftBarClose
 {
